# elliptic_curve_diffie_hellman

./: .clang-format  CMakeLists.txt  Readme.md
industry_standard/: CMakeLists.txt  main.cpp
industry_standard/include/: SecurityLevel.hpp
industry_standard/source/: SecurityLevel.cpp  main.cpp
textbook/: CMakeLists.txt  Readme.md
textbook/include/: BigInt.hpp  KeyManager.hpp  Math.hpp  Printer.hpp
textbook/source/: CMakeLists.txt  KeyManager.cpp  Math.cpp  Pipe.cpp  Printer.cpp  main.cpp
utils/: CMakeLists.txt
utils/include/utils/: Check.hpp  Pipe.hpp  Printer.hpp  Table.hpp
utils/include/utils/benchmark/: BenchmarkResults.hpp  Benchmarker.hpp  Timestamp.hpp
utils/source/: Pipe.cpp  Printer.cpp  Table.cpp
utils/source/benchmark/: BenchmarkResults.cpp  Benchmarker.cpp  Timestamp.cpp
